<resources>
    <string name="app_name">TourMate</string>
    <string name="let_s_travel">Let\'s travel</string>
    <string name="welcome">Welcome!</string>
    <string name="login">Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="nearby">Nearby</string>
    <string name="setting">Setting</string>
    <string name="atm">atm</string>
    <string name="hospital">hospital</string>
    <string name="restaurant">restaurant</string>
    <string name="cafe">cafe</string>
    <string name="post_office">post office</string>
    <string name="shopping">shopping</string>
    <string name="location_name">Name:</string>
    <string name="location">Location</string>
    <string name="recommend_other_location">Recommend Other Location</string>
    <string name="back">Back</string>
    <string name="continue_select">Select other location</string>
    <string name="no_data_found">No Data found</string>
    <string name="history">History</string>
    <string name="log_out">Log out</string>
    <string name="saved_places">Saved Places</string>
    <string name="introduce">Introduce</string>
    <string name="choose_this_location">Choose this location</string>
    <string name="add_to_your_favorite_list">Add to favorite list</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="add_to_itinerary">Add to saved place</string>
    <string name="success">Success</string>
    <string name="fail">Fail</string>
    <string name="unknown_error">An unknown error</string>
    <string name="cant_connect_to_server">Can\'t connect to server</string>
    <string name="location_exists">This location already exists on the list</string>
    <string name="my_favorite">My Favorite</string>
    <string name="notice">Notice</string>
    <string name="delete_favorite_location">Delete this location in your favorite</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="saved_place">Saved Place</string>
    <string name="start_build_your_itinerary">Build Itinerary</string>
    <string name="auto">Auto sort</string>
    <string name="top_5_recommend_for_you">Top 5 recommend for you</string>
    <string name="neaby_me">Neaby Me</string>
    <string name="pharmacy">pharmacy</string>
    <string name="police">police</string>
    <string name="fuel">fuel</string>
    <string name="top_10_best_location_in_vietnam">Top 10 best location in VietNam</string>
    <string name="choose_the_city_for_your_tour">Choose the city for your tour</string>
    <string name="tour_mate">Tour Mate</string>
    <string name="_0966175932">0966175932</string>
    <string name="_2023_travel_vietnam">© 2023 - Travel Vietnam</string>
    <string name="more">More</string>
    <string name="oops">Oops!</string>
    <string name="no_internet_connection_found">No internet connection found. \n Check your internet connection</string>
    <string name="try_again">Try again</string>
    <string name="this_is_the_itinerary_that_i_suggest_for_you">This is the itinerary that I suggest for you</string>
    <string name="edit_itinerary">Edit Itinerary</string>
    <string name="recalculation">Recalculation</string>
    <string name="view_on_map">View on Map</string>
    <string name="save_plan">Save plan</string>
    <string name="refresh">Refresh</string>
    <string name="google_map">Google Map</string>
    <string name="osm">Open Street Map</string>
    <string name="choose_type_map">Choose type map</string>
    <string name="exit_confirm">Exit Confirmation</string>
    <string name="confirm">Are you sure you want to exit the application?</string>
    <string name="exit">Exit</string>
    <string name="cancel">Cancel</string>
</resources>