<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.nearby.NearbyFragment">

    <LinearLayout
        android:paddingLeft="@dimen/_10sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/image_btn_cafe"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:contentDescription="@string/cafe"
            android:padding="@dimen/_30sdp"
            android:src="@drawable/ic_cafe" />

        <ImageButton
            android:id="@+id/image_btn_restaurant"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:contentDescription="@string/restaurant"
            android:padding="@dimen/_30sdp"
            android:src="@drawable/ic_food" />

        <ImageButton
            android:id="@+id/image_btn_hospital"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:contentDescription="@string/hospital"
            android:padding="@dimen/_30sdp"
            android:src="@drawable/ic_hospital" />

        <ImageButton
            android:id="@+id/image_btn_atm"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:contentDescription="@string/atm"
            android:padding="@dimen/_30sdp"
            android:src="@drawable/ic_atm" />
        <ImageButton
            android:id="@+id/image_btn_post_office"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:contentDescription="@string/post_office"
            android:padding="@dimen/_30sdp"
            android:src="@drawable/ic_post_office" />
        <ImageButton
            android:id="@+id/image_btn_shopping"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:contentDescription="@string/shopping"
            android:padding="@dimen/_30sdp"
            android:src="@drawable/ic_shopping" />
    </LinearLayout>
    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.MainActivity" />
</LinearLayout>