<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.NearbyActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="wrap_content"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/light_blue"
                android:theme="@style/ThemeOverlay.AppCompat.Light"
                app:titleTextColor="@color/white" />
        </com.google.android.material.appbar.AppBarLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <fragment
                android:id="@+id/map_fragment"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".controller.NearbyActivity" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/chip_group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_8sdp"
                    app:chipSpacingHorizontal="@dimen/_8sdp"
                    app:singleLine="true"
                    app:singleSelection="true">

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_cafe"
                        style="@style/Widget.MaterialComponents.Chip.Filter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/light_blue"
                        android:checkable="false"
                        android:onClick="onClickNearbySearch"
                        android:text="@string/cafe"
                        android:textColor="@color/white"
                        app:chipIcon="@drawable/ic_cafe"
                        app:chipIconTint="@color/light_blue" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_atm"
                        style="@style/Widget.MaterialComponents.Chip.Filter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/light_blue"
                        android:checkable="false"
                        android:onClick="onClickNearbySearch"
                        android:text="@string/atm"
                        android:textColor="@color/white"
                        app:chipIcon="@drawable/ic_atm" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_restaurant"
                        style="@style/Widget.MaterialComponents.Chip.Filter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/light_blue"
                        android:checkable="false"
                        android:text="@string/restaurant"
                        android:onClick="onClickNearbySearch"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_12ssp"
                        app:chipIcon="@drawable/ic_food" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_pharmacy"
                        style="@style/Widget.MaterialComponents.Chip.Filter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/light_blue"
                        android:checkable="false"
                        android:onClick="onClickNearbySearch"
                        android:text="@string/pharmacy"
                        android:textColor="@color/white"
                        app:chipIcon="@drawable/ic_pharmacy" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_shopping"
                        style="@style/Widget.MaterialComponents.Chip.Filter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/light_blue"
                        android:checkable="false"
                        android:onClick="onClickNearbySearch"
                        android:text="@string/shopping"
                        android:textColor="@color/white"
                        app:chipIcon="@drawable/ic_shopping" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_fuel"
                        style="@style/Widget.MaterialComponents.Chip.Filter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/light_blue"
                        android:checkable="false"
                        android:onClick="onClickNearbySearch"
                        android:text="@string/fuel"
                        android:textColor="@color/white"
                        app:chipIcon="@drawable/ic_fuel" />
                </com.google.android.material.chip.ChipGroup>
            </HorizontalScrollView>
        </FrameLayout>
    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/menu_navigation" />
</androidx.drawerlayout.widget.DrawerLayout>